micro-java/src/main/fabric8/deployment.yml
---
apiVersion: "v1"
kind: "DeploymentConfig"
metadata:
  annotations:
    fabric8.io/iconUrl: "img/icons/camel.svg"
  labels:
    provider: "fabric8"
    project: "${env.RHT_OCP4_DEV_USER}-${project.artifactId}"
    version: "1.0"
    group: "com.redhat.training"
  name: "${project.artifactId}"
spec:
  replicas: 1
  selector:
    project: "${env.RHT_OCP4_DEV_USER}-${project.artifactId}"
    provider: "fabric8"
    group: "com.redhat.training"
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: "Rolling"
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: "img/icons/camel.svg"
      labels:
        provider: "fabric8"
        project: "${env.RHT_OCP4_DEV_USER}-${project.artifactId}"
        version: "1.0"
        group: "com.redhat.training"
    spec:
      containers:
      - image: "${project.artifactId}:1.0"
        imagePullPolicy: "IfNotPresent"
        name: "spring-boot"
        ports:
          - containerPort: 8080
            name: "http"
            protocol: "TCP"
        #- containerPort: 9081
        #  name: "rest"
        #  protocol: "TCP"
        securityContext:
          privileged: false
        #readinessProbe:
        #  httpGet:
        #    path: "/hello/health"
        #    port: 9081
        #  initialDelaySeconds: 20
  triggers:
  - type: "ConfigChange"
  - imageChangeParams:
      automatic: true
      containerNames:
      - "spring-boot"
      from:
        kind: "ImageStreamTag"
        name: "${project.artifactId}:1.0"
    type: "ImageChange"
