micro-java/src/main/fabric8/svc.yml
---
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    fabric8.io/iconUrl: img/icons/camel.svg
  labels:
    expose: "true"
    app: ${project.artifactId}
    provider: fabric8
    version: "1.0"
    group: com.redhat.training
  name: ${project.artifactId}
spec:
  ports:
  - name: http-tomcat
    port: 8080
    protocol: TCP
    targetPort: 8080
#  - name: rest
#    port: ${rest-port}
#    protocol: TCP
#    targetPort: ${rest-port}
  selector:
    deploymentconfig: ${project.artifactId}
